<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gigasoft.proyectosemana2curso3.ContactDetails">

    <TextView
        android:text="@string/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/details_title"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:paddingTop="@dimen/pad_top"
        android:paddingBottom="@dimen/pad_bot"
        android:text="@string/details_example1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/details_text"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_bot">

        <TextView
            android:text="@string/details_bday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="@dimen/details_text"/>

        <TextView
            android:id="@+id/tvBirthday"
            android:text="@string/details_example2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/pad_left"
            android:textSize="@dimen/details_nums"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_bot">

        <TextView
            android:text="@string/details_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"/>

        <TextView
            android:id="@+id/tvPhone"
            android:text="@string/details_example3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/pad_left"
            android:textSize="@dimen/details_nums"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/pad_bot">

        <TextView
            android:text="@string/details_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"/>

        <TextView
            android:id="@+id/tvEmail"
            android:text="@string/details_example4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/pad_left"
            android:textSize="@dimen/details_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text"/>

        <TextView
            android:id="@+id/tvDescription"
            android:text="@string/details_example5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/description_heigth"
            android:paddingLeft="@dimen/pad_left"
            android:textSize="@dimen/details_text"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnDataEdit"
        android:layout_width="@dimen/btn_details_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_details"
        android:theme="@style/MyRaisedButton"
        android:onClick="EditInformation"/>

</LinearLayout>
